<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/margin_lr" android:paddingRight="@dimen/margin_lr" android:paddingTop="@dimen/margin_lr">

        <android.support.design.widget.TextInputLayout
            android:theme="@style/TextLabel"
            android:layout_marginTop="@dimen/margin_lr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:textColor="@color/greyCustom"
                android:textColorHint="@color/greyCustom"
                android:id="@+id/nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_nama" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:theme="@style/TextLabel"
            android:layout_marginTop="@dimen/margin_lr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:textColor="@color/greyCustom"
                android:textColorHint="@color/greyCustom"
                android:id="@+id/alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_alamat" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:theme="@style/TextLabel"
            android:layout_marginTop="@dimen/margin_lr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:textColor="@color/greyCustom"
                android:textColorHint="@color/greyCustom"
                android:id="@+id/notelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_notelp" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:theme="@style/TextLabel"
            android:layout_marginTop="@dimen/margin_lr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_username" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:theme="@style/TextLabel"
            android:layout_marginTop="@dimen/margin_lr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:textColor="@color/greyCustom"
                android:textColorHint="@color/greyCustom"
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_password" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:theme="@style/TextLabel"
            android:layout_marginTop="@dimen/margin_lr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:textColor="@color/greyCustom"
                android:textColorHint="@color/greyCustom"
                android:id="@+id/repeatpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_repeatpassword" />
        </android.support.design.widget.TextInputLayout>
        <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_lr"
            android:id="@+id/singup"
            android:text="@string/placeholder_buttonsignup"/>
        <TextView
            android:paddingTop="@dimen/margin_lr"
            android:paddingBottom="@dimen/margin_lr"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dosignin"
            android:text="@string/placeholder_dosignin"/>
    </LinearLayout>
</ScrollView>
