<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">
    <ScrollView android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/margin_lr"
            android:paddingRight="@dimen/margin_lr"
            android:paddingTop="@dimen/margin_lr">
            <android.support.design.widget.TextInputLayout
                android:theme="@style/TextLabel"
                android:layout_marginTop="@dimen/margin_lr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:singleLine="true"
                    android:id="@+id/username"
                    android:textColor="@color/textBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/greyCustom"
                    android:hint="@string/placeholder_username" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:theme="@style/TextLabel"
                android:layout_marginTop="@dimen/margin_lr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:inputType="textPassword"
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textBlack"
                    android:textColorHint="@color/greyCustom"
                    android:hint="@string/placeholder_password" />
            </android.support.design.widget.TextInputLayout>
            <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_lr"
                android:id="@+id/signin"
                android:text="@string/placeholder_buttonsignin"/>
            <TextView
                android:paddingTop="@dimen/margin_lr"
                android:paddingBottom="@dimen/margin_lr"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dosignup"
                android:text="@string/placeholder_dosignup"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
